--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,7 +151,8 @@ input, select, textarea {
 	}
 
 	h2 {
-		font-size: 1.5em;
+		font-size: 2.5em;
+		font-weight: 600;
 		line-height: 1.5em;
 	}
 
@@ -1790,7 +1791,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		font-size: 2em;
+		font-size: 2.5em;
 	}
 
 /* Form */
